--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+# Nombre de la aplicación Spring Boot (útil para logs y administración)
 spring.application.name=dwese2526-ticket-logger-webapp-alvarosegovia
+
+# URL de conexión a la base de datos, tomando el valor de la variable de entorno DB_URL
 spring.datasource.url=${DB_URL}
+
+# Usuario de la base de datos, tomado de la variable de entorno DB_USER
 spring.datasource.username=${DB_USER}
+
+# Contraseña del usuario de la base de datos, tomada de la variable de entorno DB_PASSWORD
 spring.datasource.password=${DB_PASSWORD}
+
+# Clase del driver JDBC que Spring Boot usará para conectarse a la base de datos, tomada de DB_DRIVER
 spring.datasource.driver-class-name=${DB_DRIVER}
 
 # Indica cuál es el fichero de las variables de entorno
@@ -42,3 +51,6 @@ app.upload-root=${APP_UPLOAD_PATH}
 # - classpath:/static/  (css, js, imágenes del proyecto)
 # - file:${app.upload-root}/  (directorio externo)
 spring.web.resources.static-locations=classpath:/static/,file:${app.upload-root}/
+
+# Puerto interno de la app
+server.port=${APP_PORT}
