--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
 			<version>3.1.3.RELEASE</version> <!--Debe coincidir con la versión de Thymeleaf -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
