Envío de email y reseteo de contraseñas funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,25 @@ spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.c
 # Este es el campo que se recuperará para mostrar en las pantallas, en este caso login significa el nombre de usuario
 # con el que se hace login
 spring.security.oauth2.client.provider.github.user-name-attribute=login
+
+# =========================
+# Gmail SMTP (STARTTLS 587)
+# =========================
+spring.mail.from=${SPRING_MAIL_FROM}
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+# Tu cuenta Gmail completa
+spring.mail.username=${SPRING_MAIL_USERNAME}
+# CONTRASEÑA DE APLICACIÓN (App Password), no tu contraseña normal
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+# SMTP auth + TLS
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# Base pública REAL (la que ve el usuario en el navegador)
+app.public-base-url=http://localhost:8080
+
+
+# Ruta (por si cambia) del formulario de reset
+app.password-reset.path=/auth/reset-password
