AI Gemini implementation for bio generating

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,3 +63,10 @@ app.public-base-url=http://localhost:8080
 
 # Ruta (por si cambia) del formulario de reset
 app.password-reset.path=/auth/reset-password
+
+# API key de Gemini desde variable de entorno (vacío si no existe)
+gemini.api.key=${GEMINI_API_KEY}
+# URL base del API de Gemini (host/ruta) desde variable de entorno
+gemini.api.baseUrl=${GEMINI_API_BASEURL}
+# Modelo de Gemini a usar (p.ej., gemini-1.5-pro) desde variable de entorno
+gemini.api.model=${GEMINI_API_MODEL}
